--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kano-surveyer-client",
+  "name": "client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,8 +9,9 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
-    "axios": "^0.21.1",
+    "axios": "^0.25.0",
     "core-js": "^3.6.5",
+    "jsonwebtoken": "^8.5.1",
     "quasar": "^2.0.0",
     "register-service-worker": "^1.7.1",
     "vue": "^3.0.0",
@@ -25,11 +26,14 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
+    "prettier": "^2.2.1",
     "sass": "1.32.12",
     "sass-loader": "^10.1.0",
-    "vue-cli-plugin-quasar": "~4.0.1"
+    "vue-cli-plugin-quasar": "~4.0.4"
   }
 }
