--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jsonwebtoken": "^8.5.1",
     "quasar": "^2.0.0",
     "register-service-worker": "^1.7.1",
+    "socket.io-client": "^4.4.1",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.0-beta.29",
     "vue-router": "^4.0.0-0",
