--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "socket.io-client": "^4.4.1",
     "vue": "^3.0.0",
     "vue-i18n": "^9.2.0-beta.29",
+    "vue-matomo": "^4.1.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
